[package]
name = "csv_coincidence"
version = "0.1.1"
edition = "2021"
authors = ["Sergio Triana Escobedo <stescobedo.31@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tool designed to efficiently search for and identify specific patterns within CSV files"
homepage = "https://github.com/stescobedo92/csv_coincidence"
repository = "https://github.com/stescobedo92/csv_coincidence"
readme = "README.md"
keywords = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
regex = "1.10.2"
